# rune

./: .file-size-waiver  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  agent-shape.toml  deny.toml  skill.md
agent-shape-reports/: baseline-v0.14.0-n5.checkpoint.jsonl  baseline-v0.14.0-n5.json  baseline-v0.14.0-n5.md
resources/: hook.sh  skill.md
scripts/: agent-shape-fixture.sh  check-file-sizes.sh
src/: color.rs  commands.rs  config.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  pedigree.rs  registry.rs  setup.rs
src/commands/: audit.rs  check.rs  clean.rs  crud.rs  doctor.rs  info.rs  ls.rs  mod.rs  status.rs  sync.rs  upstream.rs
src/registry/: archive.rs  auth.rs  cache.rs  fs.rs  git.rs  materialize.rs  mod.rs  paths.rs  validate.rs
tests/: archive.rs  integration.rs
