[package]
name = "nomograph-rune"
version = "0.7.0"
edition = "2024"
description = "Registry manager for AI coding agent skills, agents, and rules"
authors = ["Andrew Dunn <andunn@gitlab.com>"]
repository = "https://gitlab.com/nomograph/rune"
homepage = "https://gitlab.com/nomograph/rune"
keywords = ["ai", "skills", "claude-code", "agent", "registry"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["*.png", "*.svg", "hero.*", "avatar.*"]
license = "MIT"

[lib]
name = "rune"
path = "src/lib.rs"

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
dirs = "6"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
